--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
     </div>
    
 
-    <img src="/img/pbCut.jpg" alt="profilePic" class="pb">
+    <img src="img/pbCut.jpg" alt="profilePic" class="pb">
     
     <div>
     <h1>Skill set</h1>
 <div class="skillSection">
   
    
-<div class="langBox"><div class="langCircle"><img src="/img/html5-01-svgrepo-com.svg" alt="html_Logo" class="langLogo"></div></div>
-<div class="langBox"><div class="langCircle"><img src="/img/css3-01-svgrepo-com.svg" alt="css_Logo" class="langLogo"></div></div>
-<div class="langBox"><div class="langCircle"><img src="/img/javascript-155-svgrepo-com.svg" alt="js_Logo" class="langLogo"></div></div>
+<div class="langBox"><div class="langCircle"><img src="img/html5-01-svgrepo-com.svg" alt="html_Logo" class="langLogo"></div></div>
+<div class="langBox"><div class="langCircle"><img src="img/css3-01-svgrepo-com.svg" alt="css_Logo" class="langLogo"></div></div>
+<div class="langBox"><div class="langCircle"><img src="img/javascript-155-svgrepo-com.svg" alt="js_Logo" class="langLogo"></div></div>
 
 </div>
 </div>
