--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 
 
-    <img src="/img/pbCut.jpg" alt="profilePic" class="pb">
+    <img src="img/pbCut.jpg" alt="profilePic" class="pb">
     
     <div>
 <div class="skillSection">
@@ -48,13 +48,13 @@
   <p class="skillHeader">SkillSet</p>
 
    
-<div class="langBox"><div class="langCircle"><img src="/img/html5-01-svgrepo-com.svg" alt="html_Logo" class="langLogo"></div>
+<div class="langBox"><div class="langCircle"><img src="img/html5-01-svgrepo-com.svg" alt="html_Logo" class="langLogo"></div>
 <div class="expBar"><div class="exp1"><div class="barCircle"></div></div></div>
 <p class="langLabel">HTML</p></div>
-<div class="langBox"><div class="langCircle"><img src="/img/css3-01-svgrepo-com.svg" alt="css_Logo" class="langLogo"></div>
+<div class="langBox"><div class="langCircle"><img src="img/css3-01-svgrepo-com.svg" alt="css_Logo" class="langLogo"></div>
 <div class="expBar"><div class="exp2"><div class="barCircle"></div></div></div>
 <p class="langLabel">CSS</p></div>
-<div class="langBox"><div class="langCircle"><img src="/img/javascript-155-svgrepo-com.svg" alt="js_Logo" class="langLogo"></div>
+<div class="langBox"><div class="langCircle"><img src="img/javascript-155-svgrepo-com.svg" alt="js_Logo" class="langLogo"></div>
 <div class="expBar"><div class="exp3"><div class="barCircle"></div></div></div>
 <p class="langLabel">Javascript</p></div>
 
