--- a/index.html
+++ b/index.html
@@ -81,11 +81,9 @@
 
 
       <div class="contactSection">
-        <h1 class="gitTitel">Get In Touch</h1>
-        <div class="card">
-
-      
-
+        <div class="contactRightside">
+          <h1 class="gitTitel">Get In Touch</h1>
+<div class="card">
           <div class="iconContainer">
              <img src="img/user.png" alt="user" class="icon">
              <img src="img/envelope.png" alt="email" class="icon">
@@ -94,7 +92,7 @@
 
             <p class="contactData">Nam Mai Ngo <br><br>
             nam.ngomai@aol.de <br><br>
-            +49 152 242 866 60</p>
+            +49 152 242 866 60</p></div>
 
           <div class="social">
             <img src="img/github.png" alt="github" class="iconLink">
