--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="skillSection">
   <h1 class="learning">A Heart For Frontend</h1>
 
-  <p class="skillHeader">SkillSet</p>
+ <!--<p class="skillHeader">SkillSet</p> --> 
 
    
 <div class="langBox"><div class="langCircle"><img src="img/html5-01-svgrepo-com.svg" alt="html_Logo" class="langLogo"></div>
