--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <img src="img/pbCut.jpg" alt="profilePic" class="pb">
     <div>
 <div class="skillSection">
-  <h1 class="learning">A Heart For Frontend</h1>
+  <h1 class="skillHeader">A Heart For Frontend</h1>
 
- <p class="skillHeader">SkillSet</p>
+ <p class="backFont">SkillSet</p>
 
 <div class="langBox"><div class="langCircle"><img src="img/html5-01-svgrepo-com.svg" alt="html_Logo" class="langLogo"></div>
 <div class="expBar"><div class="exp1"><div class="barCircle"></div></div></div>
