--- a/index.html
+++ b/index.html
@@ -64,8 +64,11 @@
             <a href="https://n4mborgh1n1.github.io/tip-calculator/" class="splitterApp">SPLITTER</a>
               is a helpful tool for groups who want to ensure a fair distribution of tips.</section>
                                  
-                    <button class="tryMeBtn">Try me</button></div>
-                  <img src="img/Bildschirmfoto 2023-06-25 um 05.33.38.png" alt="splitterScreenshot" class="splitter"></div>
+                    <button class="tryMeBtn">Try me</button>
+                    <img src="img/Bildschirmfoto 2023-06-25 um 05.33.38.png" alt="splitterScreenshot" class="splitter"></div>
+
+                  </div>
+
 
       <div class="contactSection">
         <div class="contactRightside">
