--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
              <img src="img/envelope.png" alt="email" class="icon">
              <img src="img/phone.png" alt="phoneNum" class="icon"></div>
          
-              <p class="contactData">Nam Mai Ngo <br><br>
-              nam.ngomai@aol.de <br><br>
+              <p class="contactData">Nam Fred <br><br>
+              nam.fred@aol.de <br><br>
               +49 152 242 866 60</p></div>
 
           <div class="social">
