--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             
               <p class="contactData">Nam Fred <br><br> 
               nam.fred@aol.de <br><br>
-              +4915224286660</p></div>
+              +49 15224286660</p></div>
 
           <div class="social">
             <img src="img/github.png" alt="github" class="iconLink">
