--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
             <a href="">Skills</a>
             <a href="">Projects</a>
             <a href="">Contact</a>  
+            <button onclick="toggleColorTheme()" class="colorBtn">💡</button>
+
           </div>
           <div class="dropdown">
-            <button class="dropbtn">Menu</button>
+            <button class="dropBtn">Menu</button>
             <div class="dropdown-content">
               <a href="">About</a>
               <a href="">Skills</a>
               <a href="">Projects</a>
               <a href="">Contact</a>  
+              <button onclick="toggleColorTheme()" class="colorBtn">💡</button>
+
             </div>
           </div>      
               <div class="buttonContainer">
