--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
 
           </div>
           <div class="dropdown">
-            <button class="dropBtn">Menu</button>
+            <button class="dropBtn">MENU</button>
             <div class="dropdown-content">
               <a href="">About</a>
               <a href="">Skills</a>
               <a href="">Projects</a>
               <a href="">Contact</a>  
-              <button onclick="toggleColorTheme()" class="colorBtn">💡</button>
-
             </div>
           </div>      
               <div class="buttonContainer">
