--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             Simply input the total bill amount and select the number of people sharing the tip.
             <a href="https://n4mborgh1n1.github.io/tip-calculator/" class="splitterApp">SPLITTER	&#10697;</a>
               is a helpful tool for groups who want to ensure a fair distribution of tips.</section>                                
-                    <button class="tryMeBtn">Try me</button>
+                    <button class="tryMeBtn">Explore More</button>
                     <img src="img/Bildschirmfoto 2023-06-25 um 05.33.38.png" alt="splitterScreenshot" class="splitter"></div>
                   </div>
       <div class="contactSection"> <!--will add something to fill out empty space-->
